# cl-monitoring-codex

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  MILESTONES.MD  MILESTONES.md  README.md  pyproject.toml  run_discovery.py
collector/: __init__.py  config.py  discovery.py  library_inspection.py  log_analysis.py  normalize.py  raw_store.py  reporting.py  transport.py
config/: user_scope.yml
docs/: README.md  agent-prompts.md
docs/adr/: 0001-readonly-companion.md  0002-local-history-and-poller.md  0003-minimal-dashboard.md  0004-runtime-service-mode.md
docs/discovery/: api-map.md  entity-summary.md  gpt-pro-handoff.md  log-patterns.md  open-questions.md  parameter-taxonomy.md
docs/domain/: live-contract.md  normalization-rules.md  parser-observations.md  status-parser-contract.md  structured-markers.md
docs/rollout/: shadow-mode.md
fixtures/: README.md  manifest.md
fixtures/api/: results_ID_768.json  results_ID_796.json  schedules.json  spider_ID_736.json  spider_ID_737.json  spider_ID_738.json  spider_ID_739.json  spider_ID_740.json  spider_ID_752.json  spider_ID_759.json  (+58 more)
tests/: conftest.py  test_app_runtime.py  test_cli.py  test_client.py  test_collector_discovery.py  test_config.py  test_crawllib_parser.py  test_discovery.py  test_fixture_classifier.py  test_library_inspection.py  test_log_analysis.py  test_models.py  test_normalize.py  test_normalizers.py  test_parser.py  test_poller.py  test_raw_store.py  test_readonly_client.py  test_redaction.py  test_repo.py  test_reporting.py  test_schedule_engine.py  test_transport.py  test_web_routes.py
(+110 files in other folders)
